--- a/taskmanagement/package.json
+++ b/taskmanagement/package.json
@@ -19,7 +19,9 @@
     "graphql": "^15.5.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-document-picker": "^5.0.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-indicators": "^0.17.0",
     "react-native-reanimated": "^2.0.1",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^2.18.1",
